fix dark mode li

--- a/src/components/home/Home.module.scss
+++ b/src/components/home/Home.module.scss
@@ -143,11 +143,11 @@ li {
   }
 }
 
-.resume {
+.resumeItem {
   li {
     display: flex;
     align-items: center;
-    gap: 1rem; /* Adjust the spacing between the icon and text */
+    gap: 1rem;
     font-size: 1rem;
     cursor: pointer;
     transition: color 200ms ease;
@@ -161,9 +161,9 @@ li {
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 1.5rem;
-      width: 1.5rem; /* Adjust the width of the icon */
-      height: 1.5rem; /* Adjust the height of the icon */
+      font-size: 5rem;
+      width: .5rem;
+      height: .5rem;
       margin-right: 0.48rem;
       @media only screen and (min-width: 940px) {
         margin-right: 0.9rem;
